Added new fail whale

--- a/client/assets/css/custom.css
+++ b/client/assets/css/custom.css
@@ -1,7 +1,7 @@
 #whale {
 	margin-left: auto;
 	margin-right: auto;
-	background: url(http://sierraclub.typepad.com/photos/uncategorized/2008/04/29/singing_whale_thumbnail.jpg);
+	background: url(../images/whale_420.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	height: 80%;
